# lumiere-v-1

./: .gitignore  Makefile  spacetime.local.json
ai-gateway/: .env.example  Cargo.toml
ai-gateway/src/: config.rs  embeddings.rs  error.rs  kaggle.rs  main.rs  qdrant_client.rs  state.rs  stdb_client.rs  worker.rs
ai-gateway/src/routes/: embed.rs  health.rs  kaggle.rs  mod.rs  rag.rs  search.rs
docs/api/: form-configuration.md
docs/guides/: form-configuration.md
frontend/: ACCOUNTING_UI_PLAN.md  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
frontend/mobile/: .env.example  package.json
frontend/mobile/app/: _layout.tsx
frontend/mobile/lib/: stdb.ts
frontend/web/: .env.example  ERP_FRONTEND_PLAN.md  README.md  next.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.tsbuildinfo
frontend/web/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/web/lib/: dashboard-config.ts  dashboard-types.ts  demo-dashboard-config.ts  demo-entry-table-config.ts  demo-form-configs.ts  entry-table-config.ts  entry-table-types.ts  forensic-report-types.ts  form-config-types.ts  form-configs.ts  form-types.ts  module-dashboard-configs.ts  notebook-types.ts  rbac-context.tsx  rbac-defaults.ts  rbac-types.ts  stdb-session.ts  utils.ts
iot-gateway/: .env.example  Cargo.toml
iot-gateway/src/: config.rs  main.rs  state.rs
iot-gateway/src/routes/: actions.rs  devices.rs  health.rs  mod.rs  ws.rs
spacetimedb/: Cargo.toml
spacetimedb/src/: helpers.rs  lib.rs  seed.rs  types.rs
spacetimedb/src/accounting/: analytic_accounting.rs  bank_reconciliation.rs  budgeting.rs  chart_of_accounts.rs  consolidation.rs  financial_statements.rs  fiscal_periods.rs  fixed_assets.rs  intercompany.rs  journal_entries.rs  mod.rs  payment_terms.rs  payments.rs  tax_management.rs
spacetimedb/src/ai/: agents.rs  ai_integration_test.rs  intelligence.rs  mod.rs
spacetimedb/src/analytics/: dashboards.rs  mod.rs  reports.rs
spacetimedb/src/core/: audit.rs  messaging.rs  mod.rs  organization.rs  permissions.rs  (+5 more)
spacetimedb/tests/: ai_integration_test.rs
(+181 files in other folders)
