[package]
name = "ai-gateway"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gateway"
path = "src/main.rs"

[dependencies]
# HTTP server
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client (Voyage AI, Claude API, Kaggle)
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }

# Concurrent in-memory maps (job tracking, search cache)
dashmap = "6"

# UUIDs for download job IDs
uuid = { version = "1", features = ["v4"] }

# Async stream utilities (Kaggle download progress)
futures = "0.3"

# Qdrant vector DB (official Rust client)
qdrant-client = "1"

# Config / environment
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "1"

[profile.release]
opt-level = 3
lto = true
